--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
     var iframe = document.getElementById('myFrame');
     
     // Set the source URL for the iframe
-    var url = 'https://improvement-setting.s23terms.us/terms/'; //
+    var url = 'https://improvement-setting.s23terms.us/guidelines/'; //
     iframe.src = url;
 </script>
 
